--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -5,6 +5,11 @@
 }
 :root {
     color-scheme: light dark;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+        "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    color: #333;
+    background-color: #f9f9f9;
+
     scroll-behavior: smooth;
     interpolate-size: allow-keywords;
 }
