--- a/src/components/SNS.astro
+++ b/src/components/SNS.astro
@@ -73,6 +73,9 @@ const snsLinks = [
         h2 {
             font-size: 1.5rem;
             margin-bottom: 1rem;
+            @media (width < 400px) {
+                font-size: 1.25rem;
+            }
         }
         ul {
             list-style: none;
