--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,3 +1,5 @@
+@import "ui.css";
+
 * {
     margin: 0;
     padding: 0;
@@ -5,7 +7,8 @@
 }
 :root {
     color-scheme: light dark;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+    font-family:
+        -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
         "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     color: #333;
     background-color: #f9f9f9;
