レイアウトにギャップを追加

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,5 +29,6 @@ import Top from "@components/Top.astro";
         max-width: 800px;
         margin: 0 auto;
         padding: 1rem;
+        gap: 2.5rem;
     }
 </style>
