--- a/src/components/SNS.astro
+++ b/src/components/SNS.astro
@@ -1,5 +1,4 @@
 ---
-import "@styles/global.css";
 import { Icon } from "astro-icon/components";
 
 const snsLinks = [
@@ -41,7 +40,7 @@ const snsLinks = [
 ];
 ---
 
-<section class="sns-links card">
+<section class="card">
     <h2>Follow us on Social Media</h2>
     <ul>
         {
@@ -65,29 +64,20 @@ const snsLinks = [
 </section>
 
 <style>
-    .sns-links {
-        h2 {
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
-            @media (width < 400px) {
-                font-size: 1.25rem;
-            }
+    ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        li + li {
+            margin-top: 1rem;
         }
-        ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            li + li {
-                margin-top: 1rem;
-            }
 
-            @media (650px < width) {
-                display: grid;
-                grid-template-columns: repeat(2, 1fr);
-                gap: 1rem;
-                li + li {
-                    margin-top: 0;
-                }
+        @media (650px < width) {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 1rem;
+            li + li {
+                margin-top: 0;
             }
         }
     }
