スキルを追加

--- a/src/assets/styles/ui.css
+++ b/src/assets/styles/ui.css
@@ -11,4 +11,10 @@
             font-size: 1.25rem;
         }
     }
+    h3 {
+        font-size: 1.2rem;
+        @media (width < 400px) {
+            font-size: 1rem;
+        }
+    }
 }
