--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,10 @@ import "@styles/global.css";
 
 import Layout from "@layouts/Layout.astro";
 import SNS from "@components/SNS.astro";
+import Skills from "@components/Skills.astro";
 ---
 
 <Layout>
     <SNS />
+    <Skills />
 </Layout>
