--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -67,26 +67,130 @@ const skillGroups = [
         </div>
     </div>
 
-    <div class="skills-container">
-        {
-            skillGroups.map((group) => (
-                <>
-                    <h3>{group.category}</h3>
-                    <div class="skill-list">
-                        {group.skills.map((skill) => (
-                            <div class="item" title={skill.name}>
-                                <Icon name={skill.icon} />
-                                <p>{"★".repeat(skill.level) + "☆".repeat(5 - skill.level)}</p>
-                                <span>{skill.name}</span>
-                            </div>
-                        ))}
-                    </div>
-                </>
-            ))
-        }
+    <input type="checkbox" id="expand-skills" class="expand-toggle" />
+    <div class="skills-content-wrapper">
+        <div class="skills-container">
+            {
+                skillGroups.map((group) => (
+                    <>
+                        <h3>{group.category}</h3>
+                        <div class="skill-list">
+                            {group.skills.map((skill) => (
+                                <div class="item" title={skill.name}>
+                                    <Icon name={skill.icon} />
+                                    <p>{"★".repeat(skill.level) + "☆".repeat(5 - skill.level)}</p>
+                                    <span>{skill.name}</span>
+                                </div>
+                            ))}
+                        </div>
+                    </>
+                ))
+            }
+        </div>
+        <label for="expand-skills" class="expand-label more">もっと見る</label>
+        <label for="expand-skills" class="expand-label less">閉じる</label>
     </div>
 </section>
 <style>
+    .expand-toggle {
+        display: none;
+        &:checked + .skills-content-wrapper {
+            max-height: fit-content;
+
+            &::after {
+                opacity: 0;
+            }
+
+            .more {
+                opacity: 0;
+                pointer-events: none;
+            }
+            .less {
+                opacity: 1;
+            }
+        }
+    }
+
+    .skills-content-wrapper {
+        position: relative;
+        max-height: 400px;
+        overflow: hidden;
+        transition: max-height 0.5s ease-in-out;
+
+        &::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 100px;
+            background: linear-gradient(to top, #ffffffee, transparent);
+            pointer-events: none;
+            transition: opacity 0.5s;
+        }
+    }
+
+    .expand-label {
+        display: block;
+        position: absolute;
+        bottom: 1rem;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: rgba(128, 128, 128, 0.2);
+        backdrop-filter: blur(4px);
+        padding: 0.5rem 2rem;
+        border-radius: 999px;
+        cursor: pointer;
+        z-index: 1;
+        transition:
+            font-size 0.3s,
+            scale 0.3s,
+            opacity 0.5s;
+        overflow: hidden;
+
+        &::before {
+            content: "";
+            display: block;
+            width: 3rem;
+            height: 300%;
+            top: 50%;
+            position: absolute;
+            background: linear-gradient(
+                to right,
+                rgba(255, 255, 255, 0) 0%,
+                rgba(255, 255, 255, 0.3) 50%,
+                rgba(255, 255, 255, 0) 100%
+            );
+            transform: translate(-200%, -50%) rotate(-45deg);
+            transition: transform 0.5s ease-in-out;
+        }
+
+        &.more {
+            opacity: 1;
+        }
+
+        &.less {
+            opacity: 0;
+            position: static;
+            margin-inline: auto;
+            margin-bottom: 0.5rem;
+            width: fit-content;
+            transform: none;
+        }
+
+        &:hover {
+            &::before {
+                transform: translate(500%, -50%) rotate(-45deg);
+            }
+            &.more {
+                font-size: 1.05rem;
+            }
+            &.less {
+                scale: 1.05;
+            }
+        }
+    }
+
     .skills-container h3 {
         margin-top: 1rem;
 
@@ -256,4 +360,5 @@ const skillGroups = [
                 transform: none;
             }
         }
-    
+    }
+</style>
