ボーダー半径を修正

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -139,7 +139,7 @@ const skillGroups = [
         background-color: rgba(128, 128, 128, 0.2);
         backdrop-filter: blur(4px);
         padding: 0.5rem 2rem;
-        border-radius: 999px;
+        border-radius: 100vmax;
         cursor: pointer;
         z-index: 1;
         transition:
