--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,26 @@
 import "@styles/global.css";
 
 import Layout from "@layouts/Layout.astro";
+import Top from "@components/Top.astro";
 import SNS from "@components/SNS.astro";
 import Skills from "@components/Skills.astro";
 ---
 
 <Layout>
-    <SNS />
-    <Skills />
+    <Top />
+    <main>
+        <SNS />
+        <Skills />
+    </main>
 </Layout>
+
+<style>
+    main {
+        display: flex;
+        flex-direction: column;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 1rem;
+        gap: 2.5rem;
+    }
+</style>
