作品ショーケースを追加

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Layout from "@layouts/Layout.astro";
 import Top from "@components/Top.astro";
 import SNS from "@components/SNS.astro";
 import Skills from "@components/Skills.astro";
+import Showcase from "@components/Showcase.astro";
 ---
 
 <Layout>
@@ -12,6 +13,7 @@ import Skills from "@components/Skills.astro";
     <main>
         <SNS />
         <Skills />
+        <Showcase />
     </main>
 </Layout>
 
