--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -19,7 +19,7 @@ const showcases = [
     {
         name: "Super SNS Simulator",
         description:
-            "多言語間のコミュニケーションをスムーズにする究極のSNS。ReactとTypeScriptを用いてモックアップを開発しました。",
+            "多言語間のコミュニケーションをスムーズにする究極のSNS。ReactとTypeScriptを用いてモックアップを作成しました。",
         imageUrl: SSSS,
     },
 ];
@@ -56,7 +56,6 @@ const showcases = [
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 1rem;
-        margin-top: 1rem;
     }
     .showcase-item {
         border: 1px solid var(--border-color);
