--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -274,6 +274,7 @@ const skillGroups = [
                 font-size: 1.2rem;
                 color: #e0b807;
                 margin: 0;
+                user-select: none;
 
                 @container (width < 80px) {
                     font-size: 1rem;
