フッターを追加

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Top from "@components/Top.astro";
 import SNS from "@components/SNS.astro";
 import Skills from "@components/Skills.astro";
 import Showcase from "@components/Showcase.astro";
+import Footer from "@components/Footer.astro";
 ---
 
 <Layout>
@@ -15,6 +16,7 @@ import Showcase from "@components/Showcase.astro";
         <Skills />
         <Showcase />
     </main>
+    <Footer />
 </Layout>
 
 <style>
