--- a/src/assets/styles/ui.css
+++ b/src/assets/styles/ui.css
@@ -7,14 +7,21 @@
     h2 {
         font-size: 1.5rem;
         margin-bottom: 1rem;
-        @media (width < 400px) {
-            font-size: 1.25rem;
-        }
     }
     h3 {
         font-size: 1.2rem;
-        @media (width < 400px) {
+    }
+
+    @media (width < 400px) {
+        padding: 1rem;
+        h2 {
+            font-size: 1.25rem;
+        }
+        h3 {
             font-size: 1rem;
+        }
+        p {
+            font-size: 0.9rem;
         }
     }
 }
