ダークモードのスタイルを追加

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -16,3 +16,10 @@
     scroll-behavior: smooth;
     interpolate-size: allow-keywords;
 }
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        color: #f9f9f9;
+        background-color: #333;
+    }
+}
