--- a/src/components/SNS.astro
+++ b/src/components/SNS.astro
@@ -138,4 +138,20 @@ const snsLinks = [
             }
         }
     }
+    @media (prefers-color-scheme: dark) {
+        a {
+            border: 1px solid #333;
+            color: #ddd;
+            &:hover {
+                background-color: #333;
+                border-color: #444;
+                box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+            }
+            .account-info {
+                .account-id {
+                    color: #aaa;
+                }
+            }
+        }
+    }
 </style>
