--- a/src/components/Top.astro
+++ b/src/components/Top.astro
@@ -89,4 +89,13 @@ import Back from "@img/background.png";
             }
         }
     }
+    @media (prefers-color-scheme: dark) {
+        .top .blur-bg {
+            filter: blur(5px) brightness(1.1) opacity(0.15) contrast(1.2) invert(1);
+        }
+        .logo {
+            background-color: #eee;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+        }
+    }
 </style>
