--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,6 +11,7 @@ import "@styles/global.css";
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
         <meta name="generator" content={Astro.generator} />
         <title>SAS新聞 | Official Site</title>
+        <meta name="description" content="SAS新聞の公式サイトです。私の制作物やスキル、SNSリンクなどを紹介しています。" />
     </head>
 
     <body>
