--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -186,5 +186,8 @@ const showcases = await Promise.all(
                 border-color: #555;
             }
         }
+        .tag {
+            --tag-color: #9feaf9;
+        }
     }
 </style>
