--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,12 +6,19 @@ import "@styles/global.css";
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
+
+        <!-- あとで外す -->
+        <meta name="robots" content="noindex, nofollow" />
+
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
         <meta name="generator" content={Astro.generator} />
         <title>SAS新聞 | Official Site</title>
-        <meta name="description" content="SAS新聞の公式サイトです。私の制作物やスキル、SNSリンクなどを紹介しています。" />
+        <meta
+            name="description"
+            content="SAS新聞の公式サイトです。私の制作物やスキル、SNSリンクなどを紹介しています。"
+        />
     </head>
 
     <body>
