--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,8 @@ import "@styles/global.css";
         <!-- あとで外す -->
         <meta name="robots" content="noindex, nofollow" />
 
+        <link rel="sitemap" href="/sitemap-index.xml" />
+
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
