--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,11 +21,7 @@ import Footer from "@components/Footer.astro";
 
 <style>
     main {
-        display: flex;
-        flex-direction: column;
         max-width: 800px;
-        margin: 0 auto;
-        padding: 1rem;
-        gap: 2.5rem;
+        margin-inline: auto;
     }
 </style>
