UIスタイルの調整

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,11 @@ import Footer from "@components/Footer.astro";
 
 <style>
     main {
+        display: flex;
+        flex-direction: column;
+        gap: 2.5rem;
         max-width: 800px;
         margin-inline: auto;
+        padding: 1rem;
     }
 </style>
